# cross-browser

./: .gitlab-ci.yml  README.md  pyproject.toml
Utils/: Config.py  Functions_Util.py  MiniMap_Util.py  customLogger.py  selenium_locators.py  slackclient.py  testData.py  zephyr.py  zephyr_settings.py
pageObjects/: BasePage.py  FeaturePage.py  LoginPage.py
testCases/: conftest.py  pytest.ini  test_Edit_login.py  test_Line.py  test_Operator.py  test_Summary.py
